[package]
name = "fil-wdpost-bench"
version = "0.1.0"
edition = "2021"

[features]
cuda-supraseal = [
    "storage-proofs-core/cuda-supraseal",
    "storage-proofs-post/cuda",
    "bellperson/cuda-supraseal",
    "filecoin-hashers/cuda",
]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
rand = "0.8.5"
blstrs = "0.7.1"
env_logger = "0.9.0"

filecoin-proofs-api = "16.0.0"
filecoin-proofs = "16.0.0"
storage-proofs-core = "16.0.0"
storage-proofs-post = "16.0.0"
filecoin-hashers = "11.0.0"
bellperson = "0.26.0"
